--- a/Sinav_Takvim/DersSecimiWindow.xaml
+++ b/Sinav_Takvim/DersSecimiWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         mc:Ignorable="d"
-        Title="DersSecimiWindow" WindowStartupLocation="CenterScreen" Height="1000" Width="1500">
+        Title="DersSecimiWindow" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Height="1000" Width="1500">
     <StackPanel>
         <UniformGrid Columns="6" HorizontalAlignment="Left" MaxWidth="1450">
             <TextBlock Text="Ders&#x0a;Kodu" Background="AliceBlue"
